--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,13 @@
             height: 400px;
             position: absolute;
             z-index: 1;
+            /*
+            -webkit-transition:all 0.5s ease-in-out;
+            -moz-transition:all 0.5s ease-in-out;
+            -o-transition:all 0.5s ease-in-out;
+            -ms-transition:all 0.5s ease-in-out;
+             transition:all 0.5s ease-in-out;
+             */
         }
         #list img {
             float: left;
